Bug 235855 - System monitor crash
Summary: System monitor crash
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
: 235858 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-04-30 23:29 UTC by Joe
Modified: 2011-12-07 16:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joe 2010-04-30 23:29:07 UTC
Application: ksysguard (4.4.2 (KDE 4.4.2))
KDE Platform Version: 4.4.2 (KDE 4.4.2)
Qt Version: 4.6.2
Operating System: Linux 2.6.32-21-generic x86_64
Distribution: Ubuntu 10.04 LTS

-- Information about the crash:
Seems to happen whenever the monitor is one for more than 30 or 40 seconds.
System is a ubuntu (kubuntu) fresh lynx install

The crash can be reproduced some of the time.

 -- Backtrace:
Application: System Monitor (kdeinit4), signal: Segmentation fault
[KCrash Handler]
#5  0x00007f773cc961d9 in ListView::answerReceived (this=0x23444b0, id=<value optimized out>, answer=<value optimized out>) at ../../../ksysguard/gui/SensorDisplayLib/ListView.cc:159
#6  0x00007f773c53ad52 in KSGRD::SensorAgent::processAnswer (this=0x216f450, buf=<value optimized out>, buflen=<value optimized out>) at ../../../../ksysguard/gui/ksgrd/SensorAgent.cc:184
#7  0x00007f773c54242e in KSGRD::SensorShellAgent::msgRcvd (this=0x216f450) at ../../../../ksysguard/gui/ksgrd/SensorShellAgent.cc:91
#8  0x00007f773c543218 in KSGRD::SensorShellAgent::qt_metacall (this=0x216f450, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff8ca3bd70) at ./SensorShellAgent.moc:78
#9  0x00007f7749449e3f in QMetaObject::activate (sender=0x2172860, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x5) at kernel/qobject.cpp:3293
#10 0x00007f77493d671a in QProcessPrivate::_q_canReadStandardOutput (this=0x2179370) at io/qprocess.cpp:887
#11 0x00007f77493d6af9 in QProcess::qt_metacall (this=0x2172860, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff8ca3bf70) at .moc/release-shared/moc_qprocess.cpp:107
#12 0x00007f774a8d4a38 in KProcess::qt_metacall (this=0x7fff8ca3b860, _c=2359539624, _id=64, _a=0x5) at ./kprocess.moc:69
#13 0x00007f7749449e3f in QMetaObject::activate (sender=0x217ae00, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x5) at kernel/qobject.cpp:3293
#14 0x00007f7749495c6e in QSocketNotifier::activated (this=0x7fff8ca3b860, _t1=14) at .moc/release-shared/moc_qsocketnotifier.cpp:89
#15 0x00007f7749450fb3 in QSocketNotifier::event (this=0x217ae00, e=0x7fff8ca3c620) at kernel/qsocketnotifier.cpp:317
#16 0x00007f77485d322c in QApplicationPrivate::notify_helper (this=0x205ae90, receiver=0x217ae00, e=0x7fff8ca3c620) at kernel/qapplication.cpp:4300
#17 0x00007f77485d96fb in QApplication::notify (this=0x205a9f0, receiver=0x217ae00, e=0x7fff8ca3c620) at kernel/qapplication.cpp:4183
#18 0x00007f774997e526 in KApplication::notify (this=0x205a9f0, receiver=0x217ae00, event=0x7fff8ca3c620) at ../../kdeui/kernel/kapplication.cpp:302
#19 0x00007f774943706c in QCoreApplication::notifyInternal (this=0x205a9f0, receiver=0x217ae00, event=0x7fff8ca3c620) at kernel/qcoreapplication.cpp:704
#20 0x00007f77494608ca in QCoreApplication::sendEvent (source=0x205ea30) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#21 socketNotifierSourceDispatch (source=0x205ea30) at kernel/qeventdispatcher_glib.cpp:110
#22 0x00007f774481a8c2 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#23 0x00007f774481e748 in ?? () from /lib/libglib-2.0.so.0
#24 0x00007f774481e8fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#25 0x00007f7749460513 in QEventDispatcherGlib::processEvents (this=0x1fef140, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#26 0x00007f774868346e in QGuiEventDispatcherGlib::processEvents (this=0x7fff8ca3b860, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#27 0x00007f7749435992 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#28 0x00007f7749435d6c in QEventLoop::exec (this=0x7fff8ca3c880, flags=) at kernel/qeventloop.cpp:201
#29 0x00007f7749439aab in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#30 0x00007f773ccc1743 in kdemain (argc=<value optimized out>, argv=<value optimized out>) at ../../../ksysguard/gui/ksysguard.cc:582
#31 0x00000000004070f3 in launch (argc=3, _name=<value optimized out>, args=<value optimized out>, cwd=<value optimized out>, envc=24, envs=<value optimized out>, reset_env=false, tty=0x0, 
    avoid_loops=false, startup_id_str=0x40a4f9 "0") at ../../kinit/kinit.cpp:717
#32 0x0000000000407cb0 in handle_launcher_request (sock=8, who=<value optimized out>) at ../../kinit/kinit.cpp:1209
#33 0x000000000040823a in handle_requests (waitForPid=0) at ../../kinit/kinit.cpp:1402
#34 0x0000000000408e22 in main (argc=4, argv=<value optimized out>, envp=<value optimized out>) at ../../kinit/kinit.cpp:1845

Reported using DrKonqi
Comment 1 Lubos Lunak 2010-05-18 18:05:49 UTC
*** Bug 235858 has been marked as a duplicate of this bug. ***
Comment 2 John Tapsell 2011-12-07 16:22:27 UTC
Git commit 171abe87a095e9f09c0fa2295f0faa2e24cd25c4 by John Tapsell.
Committed on 05/12/2011 at 18:20.
Pushed by johnflux into branch 'master'.

Fix crash if there is bad data

I do not know if this is the cause for BUG 235855, but it can't hurt to have the extra check

BUG:235855

M  +1    -1    ksysguard/gui/SensorDisplayLib/ListView.cpp

http://commits.kde.org/kde-workspace/171abe87a095e9f09c0fa2295f0faa2e24cd25c4