Fix crash if there is bad data

I do not know if this is the cause for BUG 235855, but it can't hurt to have the extra check

BUG:235855